``` added email and password to alert_config.json```

--- a/alerts/alert_config.json
+++ b/alerts/alert_config.json
@@ -2,5 +2,5 @@
     "mysql_user": "root",
     "mysql_password": "********",
     "max_downtime": 3,
-    "alert_email": "your_email@example.com"
+    "alert_email": "cimf.cs331@gmail.com"
 }
