--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
-pip install requests mysql-connector-python flask 
-pip install schedule
-pip install mysql-connector
+requests
+mysql-connector-python
+flask
+schedule
